--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "axios": "^1.3.4",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.11.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
     "typescript": "5.0.3",
     "zod": "^3.21.4"
   },
